Animate page load to fix system dark mode flash

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
+body {
+  opacity: 0;
+  transition: opacity 250ms ease-in;
+}
+
+body.loaded {
+  opacity: 1;
+}
+
 .avatar {
   transform: rotate(6deg);
 }
